<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.result_details.ResultDetailActivity">

    <TextView
        android:id="@+id/resultTextView"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/playIconButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteIconButton"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/delete_trancription"
        android:padding="20dp"
        app:icon="@drawable/delete"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/playIconButton"
        app:layout_constraintEnd_toStartOf="@+id/playIconButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playIconButton"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/playIconButton"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/white"

        android:contentDescription="@string/play"
        android:padding="20dp"
        app:icon="@drawable/play"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/continueIconButton"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/go_back_to_homepage"
        android:padding="20dp"
        app:icon="@drawable/checkmark"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/playIconButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playIconButton"
        app:layout_constraintTop_toTopOf="@+id/playIconButton"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorSize="80dp"
        app:layout_constraintBottom_toTopOf="@+id/playIconButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackCornerRadius="10dp" />

    <EditText
        android:id="@+id/titreEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/loadingSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>