<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraFloatingActionButton"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/open_camera"
        android:focusable="true"
        android:src="@drawable/baseline_camera_alt_24"
        app:backgroundTint="@color/black"
        app:borderWidth="2dp"
        app:fabCustomSize="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        style="@style/TEXT"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:contentDescription="@string/settings"
        android:id="@+id/settingsIconButton"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:backgroundTint="@color/white"
        app:icon="@drawable/settings"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:padding="20dp"
     app:iconTint="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/settingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingTextView"
        app:layout_constraintTop_toTopOf="@+id/settingTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="410dp"
        android:layout_height="628dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_ocr" />

    <View
        android:id="@+id/titleDivider"
        style="@style/DIVIDER"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>